--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
     "expo-splash-screen": "~0.26.5",
@@ -32,12 +33,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.6",
-    "zustand": "^4.5.2",
-    "expo-linear-gradient": "~12.7.2"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
